2006-10-03 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/DrawingThought.py:
	* src/Links.py:
	* src/Makefile.am:
	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	* data/labyrinth-ui.xml:
	Add DrawingThought.  Add "Drawing Mode" to toolbar
	Attempt to fix various problems with XML loading in all thought types
	Various code cleanups
	Make removing links work properly again (I hope)


2006-09-25 Don Scorgie <DonScorgie@Blueyonder.co.uk>

    * src/TextThought.py:
    Fix corner rounding when a thought only contains an 'i'
    * src/MMapArea.py:
    Fix problem when loading a map stuck in "AddImage" mode


2006-09-13 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/MMapArea.py:
	Use the FileChooser instead of the old, nasty FileSelector

	* src/ImageThought.py:
	* src/TextThought.py:
	Curve the corners of thoughts slightly.  Makes the entire thing slightly prettier
	and less intimidating
	
	* src/ImageThought.py:
	Clip title to only be actual filename (ignore path and suffix)
	
	* src/BaseThought.py:
	* src/MMapArea.py:
	* src/ImageThought.py:
	Add a cursor change when resizing images, reflecting direction of change


	* src/BaseThought.py:
	* src/MMapArea.py:
	* src/ImageThought.py:
	Make loading and saving of image thoughts work.  Fingers crossed.
	Should work.
	Cleanup temp stuff from BaseThought

	* src/TextThought.py:
	* src/ImageThought.py:
	Make links originate and end in the center of thoughts
	which looks so much cooler :)
	
	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/Makefile.am:
	* src/MMapArea.py:
	* src/ImageThought.py:
	Beginnings of an Image Thought.  New mode: "Add Image".  Dosn't drop out when image added though :(
	In edit mode, image can be resized
	In mode mode, image is moved
	Links are screwed up
	Doesn't save or load (hence still screws up any maps using them)
	Can't add text to images

    * src/MMapArea.py:
    Fix typo (Rogi Lemar)
    
    * src/BaseThought.py: